Let Powermock run on Java 17.