@@ -514,6 +514,35 @@
     </reporting>
 
     <profiles>
+      <profile>
+        <id>java17</id>
+        <!-- For testing with Powermock. -->
+        <activation>
+          <jdk>[17,)</jdk>
+        </activation>
+        <build>
+          <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <argLine>
+                  --illegal-access=permit
+                  --add-opens java.base/java.lang=ALL-UNNAMED
+                  --add-opens java.base/java.net=ALL-UNNAMED
+                  --add-opens java.base/java.io=ALL-UNNAMED
+                  --add-opens java.base/java.util=ALL-UNNAMED
+                  --add-opens java.base/java.util.regex=ALL-UNNAMED
+                  --add-opens java.base/java.nio.charset=ALL-UNNAMED
+                  --add-opens java.base/sun.nio.cs=ALL-UNNAMED
+                  --add-opens java.logging/java.util.logging=ALL-UNNAMED
+                </argLine>
+              </configuration>
+            </plugin>
+          </plugins>
+        </build>
+      </profile>
+          
         <profile>
             <id>rc</id>
             <distributionManagement>
